feat(multi-tenancy): Add multitenancy (repo, routes and database)
